--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>TypeWeather</title>
   </head>
-  <body>
+  <body class="bg-gray-900 text-white antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
